--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-view-shot": "^3.7.0"
+    "react-native-view-shot": "^3.7.0",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
